tests/ui/rfcs/rfc-2632-const-trait-impl/specializing-constness-2.stderr
error[E0015]: cannot call non-const fn `<T as A>::a` in constant functions
  --> $DIR/specializing-constness-2.rs:27:5
   |
LL |     <T as A>::a();
   |     ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
